tests/baselines/reference/computedPropertyNamesDeclarationEmit6_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit6_ES5.ts(5,3): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit6_ES5.ts (1 errors) ====
    var v = {
      [-1]: {},
      [+1]: {},
      [~1]: {},
      [!1]: {}
      ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
    }
    